# fitness-agent

./: .env  .env.example  .gitignore  .replit  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  replit.md  start.sh
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_files_and_extras.py  0003_coach_prompts.py  0004_user_llm_overrides.py  0005_local_only_retention_language.py  0006_user_approval_admin.py  0007_admin_audit_log.py  0008_inner_team.py  0009_login_attempts_smtp.py  0010_nullable_audit_target.py  0011_normalize_null_api_keys.py
app/: config.py  inner_team.py  main.py
app/agent/: agent.py  attachments.py  document_gen.py  effective_config.py  image_gen.py  manager.py  prompts.py  router.py  tools.py
app/api/: admin.py  auth.py  calendar.py  chat.py  config.py  dashboard.py  deps.py  files.py  gdpr.py  profile.py  workouts.py
app/core/: email.py
app/db/: models.py  session.py
app/files/: storage.py
app/scheduler/: jobs.py
app/security/: rate_limit.py  secrets.py
deploy/: coacher-verify-keys.service  coacher-verify-keys.timer  fitness-agent-verify-keys.service  fitness-agent-verify-keys.timer
scripts/: bootstrap_user.py  verify_keys.py
static/: index.html
tests/: conftest.py  test_auth_profile.py  test_document_gen.py
